# cross-file-id

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: is_same_file.rs  is_stderr.rs
src/: lib.rs  unix.rs  unknown.rs  win.rs
