[package]
name = "cross-file-id"
version = "1.0.6"  #:version
authors = ["Brian Chin", "Andrew Gallant <jamslam@gmail.com>"]
description = """
A crate to work with cross-platform file identity.
"""
readme = "README.md"
keywords = ["same", "file", "equal", "inode"]
license = "Unlicense/MIT"
exclude = ["/.github"]
edition = "2021"
rust-version = "1.60"

[target.'cfg(windows)'.dependencies]
winapi-util = { version = "0.1.1" }
windows = { version = "0.52.0", features = ["Win32_Storage_FileSystem"]}

[dev-dependencies]
doc-comment = "0.3"

[dependencies]
io-lifetimes = "1.0.11"
