[package]
name = "cross-file-id"
version = "1.0.7"  #:version
authors = ["Brian Chin", "Andrew Gallant <jamslam@gmail.com>"]
description = """
A crate to work with cross-platform file identity.
"""
readme = "README.md"
keywords = ["same", "file", "equal", "inode"]
license = "Unlicense/MIT"
exclude = ["/.github"]
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"]}

[dev-dependencies]
doc-comment = "0.3"

[dependencies]
io-lifetimes = "2.0"
